@@ -1,13 +1,16 @@
 /* Test whether Objective-C runtime was compiled with thread support */
 
-#ifndef NeXT_RUNTIME
+#ifdef gnu-runtime
 /* Dummy NXConstantString impl for so libobjc that doesn't include it */
 #include <objc/NXConstStr.h>
 @implementation NXConstantString
 @end
 #endif
 
+#ifdef gnu-runtime
 #include <objc/thr.h>
+#endif
+
 #include <objc/Object.h>
 
 int
@@ -15,5 +18,20 @@ main()
 {
   id o = [Object new];
 
+#ifdef gnu-runtime
   return (objc_thread_detach (@selector(hash), o, nil) == NULL) ? -1 : 0;
+#else
+  /* On Apple, there is no ObjC-specific thread library.  We need to
+   * use pthread directly.
+   */
+  pthread_t thread_id;
+  int error = pthread_create (&thread_id, NULL, @selector(hash), o);
+
+  if (error != 0)
+    {
+      return -1;
+    }
+
+  return 0;
+#endif
 }
