@@ -1,3 +1,13 @@
+2008-10-27  Nicola Pero  <nicola.pero@meta-innovation.com>
+
+	* configure.ac: Added special case when checking for thread
+	support on Apple OS X - it should now detect that Apple OS X
+	supports threads but needs no threading library specified.  This
+	implicitly fixes the following check for native ObjC exceptions.
+	* configure: Regenerated.
+	* config_thread.m: Rewritten Apple runtime case to use pthread
+	directly.
+
 2008-10-21  Nicola Pero  <nicola.pero@meta-innovation.com>
 
 	* Documentation/releasenotes.texi: Updated for latest changes.
